[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/PNG/Items/coinGold.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Source/Interface/Pickups/CoinPickup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="CoinPickup" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1756.0
margin_bottom = -952.0
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="CoinCounter" type="Label" parent="."]
margin_left = 132.0
margin_top = 52.0
margin_right = 196.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "9999"

[node name="VanishTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="VanishTimer" to="." method="_on_Timer_timeout"]
